--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     url: jdbc:mariadb://localhost:3306/product-manager
     username: root
-    password: admin12345
+    password: F
     driver-class-name: org.mariadb.jdbc.Driver
   jpa:
     generate-ddl: true
