--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,9 +2,10 @@ spring:
   datasource:
     url: jdbc:mariadb://localhost:3306/product-manager
     username: root
-    password: F
+    password: csbe123
     driver-class-name: org.mariadb.jdbc.Driver
   jpa:
     generate-ddl: true
     hibernate:
       ddl-auto: create-drop
+    show-sql: true
